# cli-creator-skill

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
evals/: output_cases.json  trigger_cases.json
evals/audit_fixtures/: broken_skill_missing_output_headings.md  output_missing_test_gaps.md
registry/: package.json
reports/: output_eval_scorecard.md  package_verification.md  skill_overview.md  trust_report.md
scripts/: cli_creator_review_gate.py
skill-ir/: cli-creator.json  schema.json
skills/cli-creator/: SKILL.md
skills/cli-creator/references/: creation-playbook.md  pitfalls-and-solutions.md  review-rubric.md  technical-best-practices.md
src/cli_creator_skill/: __init__.py  __main__.py  installer.py
tests/: test_review_gate.py
